clusters/hl-sol-c1/apps/app-whoami/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoamiv1
  labels:
    name: whoamiv1
spec:
  replicas: 1
  selector:
    matchLabels:
      task: whoamiv1
  template:
    metadata:
      labels:
        task: whoamiv1
    spec:
      containers:
        - name: whoamiv1
          image: traefik/traefikee-webapp-demo:v2
          args:
            - -ascii
            - -name=FOO
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /ping
              port: 80
            failureThreshold: 1
            initialDelaySeconds: 2
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests: 
              cpu: 10m
              memory: 128Mi
            limits: 
              cpu: 200m
              memory: 256Mi  
---
apiVersion: v1
kind: Service
metadata:
  name: whoamiv1
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    task: whoamiv1
